@@ -1,3 +1,4 @@
+* FEA#9492 Ajout d'un champ stocké pour le contrat commissionné
 * BUG#7515 Blocage de la création / modification manuelle des commissions
 * FEA#9133 Définition explicite des courtiers
 * FEA#9044 Ajout des bordereaux assureurs prestation au niveau du point d'entrée bordereaux assureurs
