@@ -1,3 +1,4 @@
+* FEA#9492 Add a stored field for the commissioned contract
 * BUG#7515 Block manual creation / modification of commissions
 * FEA#9133 Explicit broker definition in distribution network
 * FEA#9044 Add the claim insurer invoice at the comission insurer entry point
